# wownowpy

./: README.md  pyproject.toml
src/wownow/: __main__.py
