[project]
name = "wownowpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["httpx>=0.28.1"]

[tool.ruff]
line-length = 88
indent-width = 2

[dependency-groups]
dev = ["ruff>=0.12.12"]

[tool.uv]
package = true

[project.scripts]
wownow = "wownow.__main__:main"
